<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".auth.presentation.login.ui.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- SVG Image at the Top -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/login_image_description"
            android:src="@drawable/ic_logo_login" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="32dp"
            android:text="@string/login_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="none"
            app:endIconMode="none"
            app:hintAnimationEnabled="true"
            app:hintTextColor="?attr/colorOnBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorOnBackground"
                app:drawableEndCompat="@drawable/ic_email"
                android:background="@drawable/shadow_background"
                android:padding="16dp"
                android:elevation="4dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="none"
            app:endIconMode="none"
            app:hintAnimationEnabled="true"
            app:hintTextColor="?attr/colorOnBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_i"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorOnBackground"
                app:drawableEndCompat="@drawable/ic_visibility"
                app:endIconMode="password_toggle"
                android:background="@drawable/shadow_background"
                android:padding="16dp"
                android:elevation="8dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="16dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/signup_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signup_option"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/signup"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
