<?xml version="1.0" encoding="utf-8"?>

<!-- Signup Form -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.presentation.signup.ui.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_signup_image"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/signup_image_description"
            android:src="@drawable/ic_logo_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHeight_min="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="15dp"
            android:text="@string/signup_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="none"
            app:endIconMode="none"
            app:hintAnimationEnabled="true"
            app:hintTextColor="?attr/colorOnBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_background"
                android:elevation="8dp"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorOnBackground"
                app:drawableEndCompat="@drawable/ic_user_icon" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="none"
            app:endIconMode="none"
            app:hintAnimationEnabled="true"
            app:hintTextColor="?attr/colorOnBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_background"
                android:elevation="8dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorOnBackground"
                app:drawableEndCompat="@drawable/ic_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="none"
            app:endIconMode="none"
            app:hintAnimationEnabled="true"
            app:hintTextColor="?attr/colorOnBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_background"
                android:elevation="8dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorOnBackground"
                app:endIconMode="password_toggle" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="none"
            app:endIconMode="none"
            app:hintAnimationEnabled="true"
            app:hintTextColor="?attr/colorOnBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_background"
                android:elevation="8dp"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorOnBackground"
                app:endIconMode="password_toggle" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:padding="16dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/signup_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_option"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/login_title"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
