<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".note.presentation.ui.AddNote.ui.AddNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary"
        android:orientation="vertical">

        <!-- Formatting Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/background_pink"
            android:padding="4dp">

            <!-- Previous Button -->
            <ImageButton
                android:id="@+id/action_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/prev"
                android:src="@drawable/ic_back"
                android:padding="8dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/action_undo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/undo"
                    android:src="@drawable/ic_undo"
                    android:padding="8dp" />

                <ImageButton
                    android:id="@+id/action_redo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/redo"
                    android:src="@drawable/ic_redo"
                    android:padding="8dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:layout_gravity="end"
                android:padding="8dp"
                android:textColor="?attr/colorPrimary"
                android:background="?attr/selectableItemBackgroundBorderless" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            app:boxBackgroundMode="none"
            app:endIconMode="none"
            app:hintAnimationEnabled="true"
            app:hintTextColor="?attr/colorOnBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorOnPrimary"
                android:elevation="8dp"
                android:inputType="textAutoComplete"
                android:paddingVertical="24dp"
                android:textColor="?attr/colorOnBackground"
                android:textColorHint="?attr/colorOnBackground" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- RichEditor -->
        <jp.wasabeef.richeditor.RichEditor
            android:id="@+id/editor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/colorOnPrimary"
            android:padding="16dp"
            android:layout_marginHorizontal="16dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>